demo/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-application
  namespace: demo-test
spec:
  selector:
    app: demo-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
